# bravetailor

./: .gitignore  README.md  pyproject.toml  zz.json  zz_sampleimage
app/: ImageAI copy.py  ImageAI.py  __init__ copy 2.py  __init__ copy 3.py  __init__ copy.py  __init__.py  z.json  zz.json
app/templates/: base.html  base_bootstrap.html  base_test.html  feed.html  login.html  output.html  output2.html  row_genai.html  row_images copy.html  row_images.html  row_loading.html  upload.html  upload2.html  upload3.html
src/bravetailoring/: __init__ copy.py  __init__.py
