[project]
name = "bravetailoring"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.0.3",
    "jinja-partials>=0.2.1",
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "pybase64>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bravetailoring"]
